Update: v0.0.1.1 - minor fix on mobile device (temporary)

--- a/css/window.css
+++ b/css/window.css
@@ -108,6 +108,7 @@
 
   padding: 1.3em;
   padding-top: 1em;
+  max-width: 100vw;
 
   overflow: auto;
 }
